Fixed some squashing issues

--- a/app/assets/stylesheets/instruments.sass
+++ b/app/assets/stylesheets/instruments.sass
@@ -14,21 +14,30 @@
     color: #333
 
   .a-sequence > .row > span.a-label
-    background: #333
     width: 100%
+
+  .a-sequence > .row > span.a-label,
+  span.a-branch-label
+    background: #333
     display: block
     color: white
 
-  .a-label, .a-literal, .a-instruction
+  .a-label, .a-literal, .a-instruction,
+  .a-branch-label
     padding: 6px 12px
     display: block
+
+  .a-branch-label
+    margin-bottom: -12px
+    margin-left: -15px
+    width: calc(100% + 18px)
 
   .a-instruction
     font-style: italic
     color: #777
 
-  .a-literal
-    padding-left: 0
+  //.a-literal
+  //  padding-left: 0
 
   .a-literal
     span
@@ -53,6 +62,13 @@
   .a-icon
     margin-right: 10px
     color: #333
+
+  .a-label
+    word-wrap: break-word
+
+  .a-label-clarity
+    background: #CCCCCC
+    border-bottom-right-radius: 4px
 
   .a-statement > .tree-container > .a-label:before
     @extend .a-glyphicon
